<resources>
    <string name="app_name">Weather</string>
    <!--STRING-->
    <string name="str_logo">Weather in your city</string>
    <string name="str_choose_city">Choose city</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_show_weather">Show me weather</string>
    <string name="str_settings">Settings</string>
    <!--HINT-->
    <string name="hint_city_name">Enter the name of the city</string>
    <!--ERROR-->
    <string name="err_city_not_chosen">The city was not chosen</string>
    <string name="err_city_loading">Error with getting cities list</string>
    <string name="err_weather_loading">Error with getting weather</string>
    <!--DESCRIPTION-->
    <string name="desc_app_ic">Application icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
