<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_weather" >

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.ifeor.weather.presentation.fragments.WeatherFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_cities"
        android:name="com.ifeor.weather.presentation.fragments.CitiesFragment"
        android:label="@string/str_choose_city"
        tools:layout="@layout/fragment_cities">
        <argument
            android:name="CityArg"/>
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ifeor.weather.presentation.fragments.SettingsFragment"
        android:label="@string/str_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
